# ItemAmountCalculator

./: .hlint.yaml  ItemAmountCalculator.cabal  Makefile  README.md  build.sh  cabal-js.project  stack.yaml
.github/workflows/: build_and_deploy.yaml
app/: Action.hs  Calculator.hs  ExprEvaluation.hs  Main.hs  Model.hs
app/Calculator/: ChestsToRawNumber.hs  RawNumberToChests.hs  RawNumberToShulkerBoxes.hs  ShulkerBoxesToRawNumber.hs
src/Data/Either/: Extra.hs
static/: index.css  index.html
